RESOLVED FIXED279219
text-emphasis-position overlapping ruby suppression broken for ruby-position: under / -webkit-ruby-position: after
https://bugs.webkit.org/show_bug.cgi?id=279219
Summary text-emphasis-position overlapping ruby suppression broken for ruby-position:...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-05 13:14:16 PDT
fantasai
Comment 2 2024-09-05 15:28:06 PDT
EWS
Comment 3 2024-09-06 15:11:37 PDT
Committed 283282@main (1bd2e3ab2ace): <https://commits.webkit.org/283282@main> Reviewed commits have been landed. Closing PR #33214 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.