Check ruby-position when checking for emphasis mark / ruby conflicts https://bugs.webkit.org/show_bug.cgi?id=279219 rdar://problem/135366189

Reviewed by Alan Baradlay.

Now that we support ruby-position, we need to check the position of the
annotation, not just assume that it is on the over side.

* LayoutTests/fast/text/emphasis-avoid-ruby-001-expected.txt: Renamed from LayoutTests/fast/text/emphasis-avoid-ruby-expected.txt.
* LayoutTests/fast/text/emphasis-avoid-ruby-001.html: Renamed from LayoutTests/fast/text/emphasis-avoid-ruby.html.
* LayoutTests/fast/text/emphasis-avoid-ruby-002-expected.html: Added.
* LayoutTests/fast/text/emphasis-avoid-ruby-002.html: Added.
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::emphasisMarkExistsAndIsAbove):

Canonical link: https://commits.webkit.org/283282@main